Use ubuntu image for kea

--- a/kea/Dockerfile
+++ b/kea/Dockerfile
@@ -1,6 +1,7 @@
-FROM mztn/kea:latest
+FROM ubuntu:xenial
 LABEL maintainer="mizutani@sfc.wide.ad.jp"
 
+RUN apt-get update && apt-get install -y kea-dhcp4-server
 RUN mkdir -p /etc/kea/
 COPY kea-config.json /etc/kea/kea-config.json
 
