--- a/kea/Dockerfile
+++ b/kea/Dockerfile
@@ -1,8 +1,11 @@
 FROM ubuntu:xenial
 LABEL maintainer="mizutani@sfc.wide.ad.jp"
 
-RUN apt-get update && apt-get install -y kea-dhcp4-server
+RUN apt-get update && apt-get install -y kea-dhcp4-server kea-admin mysql-client
 RUN mkdir -p /etc/kea/
 COPY kea-config.json /etc/kea/kea-config.json
 
-CMD ["kea-dhcp4", "-c", "/etc/kea/kea-config.json"]
+RUN mkdir -p /usr/local/bin/
+COPY startup.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/startup.sh
+CMD ["/usr/local/bin/startup.sh"]
