--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,23 @@ services:
     build: ./unbound
     ports:
     - "53:53/udp"
+    depends_on:
+    - fluentd
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
   kea:
     build: ./kea
     network_mode: host
     env_file:
     - ./mysql.env
+    depends_on:
+    - fluentd
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
   kea-db:
     build: ./kea-db
     restart: always    
@@ -18,8 +30,16 @@ services:
     - ./mysql.env
     volumes:
     - kea-db-vol:/var/lib/mysql
+    depends_on:
+    - fluentd
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
   fluentd:
     build: ./fluentd
+    ports:
+    - "24224:24224"
     volumes:
     - fluentd-buffer:/var/log/fluentd
 volumes:
