--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -2,6 +2,14 @@
   @type forward
 </source>
 
+<source>
+  @type syslog
+  port 5514
+  bind 0.0.0.0
+  tag system
+  format none		
+</source>	
+
 <match **>
   @type stdout
 </match>
