--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     - "53:53/udp"
     depends_on:
     - fluentd
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
   kea:
     build: ./kea
     restart: always    
@@ -15,6 +19,10 @@ services:
     - ./mysql.env
     depends_on:
     - fluentd
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
   kea-db:
     build: ./kea-db
     restart: always    
@@ -26,6 +34,10 @@ services:
     - kea-db-vol:/var/lib/mysql
     depends_on:
     - fluentd
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
   fluentd:
     build: ./fluentd
     restart: always
