add nprobe container for netflow monitoring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,8 +44,15 @@ services:
     ports:
     - 127.0.0.1:24224:24224
     - 127.0.0.1:5514:5514/udp
+    - 127.0.0.1:2055:2055/udp
     volumes:
     - fluentd-buffer:/var/log/fluentd
+  nprobe:
+    build: ./nprobe    
+    restart: always
+    network_mode: host
+    depends_on:
+    - fluentd
   dns-gazer:
     image: mztn/dns-gazer
     restart: always
@@ -53,7 +60,7 @@ services:
     depends_on:
     - fluentd
     env_file:
-    - dns-gazer.env    
+    - dns-gazer.env
 volumes:
   kea-db-vol:
   fluentd-buffer:
