--- a/fluentd/fluent.template.conf
+++ b/fluentd/fluent.template.conf
@@ -10,3 +10,14 @@
   format none		
 </source>	
 
+<source>
+  type netflow
+	tag netflow.event
+
+  # optional parameters
+	bind 127.0.0.1
+	port 2055
+	cache_ttl 6000
+	versions [5, 9]
+	definitions /fluentd/etc/netflow_fields.yml
+</source>
