--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       driver: fluentd
       options:
         fluentd-address: localhost:24224
+        tag: "docker.{{.ImageName}}.{{.ID}}"
   kea:
     build: ./kea
     restart: always    
@@ -23,6 +24,7 @@ services:
       driver: fluentd
       options:
         fluentd-address: localhost:24224
+        tag: "docker.{{.ImageName}}.{{.ID}}"
   kea-db:
     build: ./kea-db
     restart: always    
@@ -38,6 +40,7 @@ services:
       driver: fluentd
       options:
         fluentd-address: localhost:24224
+        tag: "docker.{{.ImageName}}.{{.ID}}"
   fluentd:
     build: ./fluentd
     restart: always
@@ -53,6 +56,11 @@ services:
     network_mode: host
     depends_on:
     - fluentd
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
+        tag: "docker.{{.ImageName}}.{{.ID}}"
   dns-gazer:
     image: mztn/dns-gazer
     restart: always
@@ -61,6 +69,11 @@ services:
     - fluentd
     env_file:
     - dns-gazer.env
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
+        tag: "docker.{{.ImageName}}.{{.ID}}"
 volumes:
   kea-db-vol:
   fluentd-buffer:
