--- a/fluentd/fluent.template.conf
+++ b/fluentd/fluent.template.conf
@@ -21,3 +21,9 @@
 	versions [5, 9]
 	definitions /fluentd/etc/netflow_fields.yml
 </source>
+
+<source>
+  @type beats
+  tag beats.event
+</source>
+
