--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,17 @@ services:
       options:
         fluentd-address: localhost:24224
         tag: "docker.{{.ImageName}}.{{.ID}}"
+  packetbeat:
+    build: ./packetbeat
+    restart: always
+    network_mode: host
+    depends_on:
+    - fluentd
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: localhost:24224
+        tag: "docker.{{.ImageName}}.{{.ID}}"
   dns-gazer:
     image: mztn/dns-gazer
     restart: always
